# nse_screener_text

./: .gitignore  .mailmap  EVIDENCE_PROTOCOL.md  LITERATURE.md  README.md  ROADMAP.md  TECHNICAL_DESIGN 2.md  TECHNICAL_DESIGN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  golden-harness.yml
screener/: allocate.py  backtest.py  backup.py  bhavcopy.py  cli.py  cohort_perf.py  cohorts.py  config 2.py  config.py  cross_section.py  data_ingest.py  demo 2.py  demo.py  dsl 2.py  dsl.py  evaluator.py  explain.py  indicators 2.py  indicators.py  panel_store.py  parser 2.py  parser.py  presets.py  sr.py  universe.py  universes.py  verify.py  webapp.py
tests/: conftest.py  golden_harness 2.py  golden_harness.py  golden_queries.json  perf_bench.py  test_allocate.py  test_backtest.py  test_backup.py  test_bhavcopy.py  test_cohort_perf.py  test_cohorts.py  test_evaluator.py  test_panel_store.py  test_parser.py  test_universes.py
web/: app.css  app.js  index 2.html  index.html
web/visual/: package-lock.json  package.json  playwright.config.js
web/visual/tests/: baseline.spec.js
