[project]
name = "nse-text-screener"
version = "0.2.0"
description = "Plain-English technical stock screener for the Nifty 500"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pyarrow>=14.0",
  "requests>=2.31",
  "yfinance>=0.2.40",
  "anthropic>=0.34",
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not perf'"
markers = [
  "perf: performance-regression benchmarks (ROADMAP Item 20 P5) — excluded from the default run by addopts above; invoke explicitly with `pytest -m perf`",
]
